# TDA

./: .gitignore
1-ComplexNumberCalculator/: complexNumber.c  complexNumber.h  getInput.c  getInput.h  index.c  menu.c  types.h
2-ComplexNumber/: Makefile  test  test_ComplexNumberInit
2-ComplexNumber/libs/: ComplexNumber.h
2-ComplexNumber/src/: ComplexNumber.c
2-ComplexNumber/tests/: test_ComplexNumberInit.c
3-PointersAndArrays/: Makefile
3-PointersAndArrays/libs/: List.h
3-PointersAndArrays/src/: List.c
3-PointersAndArrays/targets/: test
3-PointersAndArrays/tests/: test_ListInit.c
4-CodeErrors/: Files.c  Files.h  __.SYMDEF SORTED  content_reader.app  eg.txt  error_log.txt  file_test  main.c  my_app
6-VectorsADT/libs/: Vector.h
6-VectorsADT/src/: Vector.c
7-CMake/: CMakeLists.txt
7-CMake/src/: CMakeLists.txt  main.c
8-Compressor/libs/: binaryBuffer.h
8-Compressor/src/: CMakeLists.txt  binaryBuffer.c
Compressor_Student/: README.md
Compressor_Student/libs/: binaryBuffer.h
Compressor_Student/src/: CMakeLists.txt  Makefile  binaryBuffer.c  cmake_install.cmake
Compressor_Student/test/: CMakeLists.txt  Makefile  cmake_install.cmake  test  test_bbuffer32.c
